# BiliTools-Pro

./: .editorconfig  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: README.md  backend.spec  pyproject.toml
apps/backend/config/: bili_config_genshin.json
apps/backend/cookies/: bili_cookies.json
apps/backend/cookies/bili_cookies_sub0/: bili_cookies_audience0.txt
apps/backend/cookies/bili_cookies_sub1/: bili_cookies_audience1.txt
apps/backend/data/cookies/: session.json
apps/backend/packaging/: backend_launcher.py
apps/backend/runtime/live_browser/slot0-1779117551/: Local State  SingletonCookie  SingletonLock  SingletonSocket
apps/backend/runtime/live_browser/slot0-1779117620/: Local State
apps/backend/runtime/live_browser/slot0-1779118072/: Local State
apps/backend/runtime/live_browser/slot0-1779118619/: Local State
apps/backend/runtime/live_browser/slot1-1779118115/: Local State
apps/backend/src/: __init__.py  main.py
apps/backend/src/api/: __init__.py  ipc_server.py
apps/backend/src/api/routes/: __init__.py  auth.py  (+5 more)
apps/backend/src/core/: __init__.py  config.py  logging.py  response.py  utils.py
apps/backend/src/services/: __init__.py  activity_info.py  app_settings.py  bilibili.py  game_config.py  http_client.py  storage.py  streaming_engine.py  task_engine.py  workflow_scheduler.py
apps/backend/tests/: conftest.py  test_bilibili_service.py  test_config.py  test_daily_live_watch.py  test_game_config.py  test_ipc_server.py  test_streaming_engine_timing.py  test_task_engine_timing.py
(+1926 files in other folders)
