[project]
name = "bilitools-backend"
version = "0.1.0"
description = "Bilibili automation backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx[socks]>=0.25.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.1.0",
    "qrcode>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
